# MVP-IMEIN-S.A-

./: .env  .gitignore  ABCXYZ OneDrive → Python → OneDrive.json  Dockerfile.n8n  README copy.md  README.md  abcxyz_products.sql  abcxyz_results.xlsx  patch.txt  tmp_inventory_js_dump.txt
db/: create-app-role.sh  init.sql
docs/: API_CONTRACT.md  README_PICKING.md  label-photo.txt  preview-example.txt
n8n_data/: config  database.sqlite  (+2 more)
services/picking-api/: Dockerfile  pyproject.toml  requirements.txt
services/picking-api/app/: auth.py  barcode_resolver.py  barcodes.py  deps.py  main.py  models.py  rbac.py  schemas.py  stock_utils.py  zpl.py
services/picking-api/app/core/: config.py
services/picking-api/app/routers/: analytics.py  audit.py  auth.py  doc_scan.py  import_abcxyz.py  inventory_simple.py  labels.py  labels_simple.py  moves.py  printing.py  receipts.py  scanning.py  stock.py
services/picking-api/app/services/: zpl_print.py  zpl_renderer.py
services/picking-api/app/templates/zpl/: etiqueta_50x30.zpl.j2  etiqueta_50x30_2across.zpl.j2  etiqueta_50x30_2across_duplicada.zpl.j2
services/picking-api/tests/: test_auth.py
services/ui/: Dockerfile  pyproject.toml
services/ui/app/: main.py
services/ui/app/static/: app.css  app.js  inventory.bak.js  inventory.js
services/ui/app/templates/: analytics_abcxyz.html  base.html  dashboard.html  inventory.html  inventory2.html  login.html  move_detail.html  moves_list.html  moves_new.html  print_labels.html  products_edit.html  products_list.html  products_new.html  receipts_list.html  receipts_new.html
(+87 files in other folders)
