[project]
name = "picking-ui"
version = "0.1.0"
description = "UI HTMX para picking"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "httpx",
  "python-dotenv",
  "itsdangerous",
  "python-multipart"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
